# MiniHaskell

./: .ghci  Base.hs  GoodHaskell.cabal  Main.hs  Makefile  MiniHaskell.cabal  POPHaskell.cabal  README  runtests-bis.sh  runtests.sh
src/: #Main.hs#  Annotation.hs  Base.hs  Main.hs  Main.hs.orig  Primitive.hs  Syntactic.hs
src/Backend/: Codegen.hs  Codegen.hs.orig  Codegen.hs~  Mangle.hs  Mips.hs  Mips.hs.orig  Primitive.hs  Runtime.hs
src/Control/Lens/: Bitraversal.hs
src/Control/Monad/: Fresh.hs
src/Core/: Expression.hs  Module.hs  Pretty.hs
src/Data/: Trifoldable.hs  Trifunctor.hs  Tritraversable.hs
src/Desugar/: Rename.hs  Typecheck.hs  Typecheck.hs.LOCAL.15330.hs  Typecheck.hs.orig  Unify.hs
src/Driver/: Driver.hs
src/Parsing/: Bindings.hs  Layout.hs  Lexer.x  Location.hs  ModuleBody.hs  Monad.hs  Parser.info  Parser.y  Token.hs  Util.hs
src/Proc/: Proc.hs  Type.hs
src/Reg/: Expression.hs  Graph.hs
src/Rename/: Declaration.hs  Expression.hs  Module.hs  Monad.hs  Syntactic.hs  Type.hs  TypeDeclaration.hs
src/Syntax/: Constraint.hs  Expression.hs  Location.hs  Module.hs  Name.hs  PrettyPrint.hs  Type.hs
src/Syntax/Full/: Layout.hs  Lexer.hs  Lexer.info  Lexer.x  Parser.hs  Parser.info  Parser.y  Parser_.hs  Token.hs
src/Syntax/Small/: Lexer.hs  Parser.hs  Token.hs
src/ToNameSTG/: ToName.hs
src/Typecheck/: Constraint.hs  Expression.hs  Module.hs  Monad.hs
