name:                GoodHaskell
version:             0.1.0.0
author:              Rafaël Bocquet
maintainer:          rafaelbocquet+github@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable GoodHaskell
  main-is:             Main.hs
  other-modules:       Parsing.Lexer,
                       Parsing.Parser,
                       Parsing.Layout
  build-depends:       base,
                       mtl,
                       transformers,
                       containers,
                       lens,
                       bifunctors,
                       pretty >= 1.1.2.0,
                       array,
                       mmorph
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-tools:         alex, happy