name:                MiniHaskell
version:             0
author:              Rafaël Bocquet
maintainer:          rafaelbocquet+github@gmail.com
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable MiniHaskell
  main-is:             Main.hs
  other-modules:       Syntax.Full.Lexer,
                       Syntax.Full.Parser,
                       Syntax.Full.Layout
  other-extensions:    RankNTypes
  build-depends:       base,
                       containers,
                       mtl,
                       array
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-tools:         alex, happy
  default-extensions:  ViewPatterns
